src/test/ui/parser/let-binop-plus.stderr
error[E0067]: can't reassign to an uninitialized variable
  --> $DIR/let-binop-plus.rs:4:16
   |
LL |     let a: i8 += 1;
   |                ^ help: initialize the variable

error[E0404]: expected trait, found builtin type `i8`
  --> $DIR/let-binop-plus.rs:4:12
   |
LL |     let a: i8 += 1;
   |            ^^ not a trait

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0067, E0404.
For more information about an error, try `rustc --explain E0067`.
